...
  bool _isAnimating = false;

  Widget getIconify(String icon, Color color) =>
    Iconify(icon, size: 24, color: color);

  final Map<String, String> tabs = {
    'Rumah': '',
    'Keluarga': IconifyConstants.fluentPeopleLight,
    'Marketplace': IconifyConstants.storeIconFlat,
    'Kegiatan': IconifyConstants.arcticonActiviyManager,
    'Profil': IconifyConstants.fluentPerson24Regular,
  };

  @override
  void initState() {
    super.initState();
    _controller = AnimationController(
...
